--- a/roles/ruby/vars/main.yml
+++ b/roles/ruby/vars/main.yml
@@ -1,4 +1,6 @@
 ---
 
-url: http://cache.ruby-lang.org/pub/ruby/2.1/ruby-2.1.0.tar.gz
-path: /tmp/ruby/ruby-2.1.0
+url: http://cache.ruby-lang.org/pub/ruby/2.1/ruby-2.1.5.tar.gz
+path: /tmp/ruby/ruby-2.1.5
+ruby_version: 2.1.5
+charlock_holmes_version: 0.7.3  
